# thundersvm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  _formulas.tex  annotated.html  appveyor.yml  classAccuracy-members.html  classAccuracy.html  classCMDParser-members.html  classCMDParser.html  classCSMOSolver-members.html  classCSMOSolver.html  classDataSet-members.html  classDataSet.html  classKernelMatrix-members.html  classKernelMatrix.html  classMSE-members.html  classMSE.html  classMetric-members.html  classMetric.html  classNuSMOSolver-members.html  classNuSMOSolver.html  classNuSVC-members.html  classNuSVC.html  classNuSVR-members.html  classNuSVR.html  classOneClassSVC-members.html  classOneClassSVC.html  classSVC-members.html  classSVC.html  classSVR-members.html  classSVR.html  classSvmModel-members.html  classSvmModel.html  classSyncArray-members.html  classSyncArray.html  (+60 more)
.github/: FUNDING.yml
DataReader/: BaseLibsvmReader.cpp  BaseLibsvmReader.h  LibsvmReaderSparse.h
Matlab/: README.md  svm_predict_matlab.m  svm_train_matlab.m
R/: README  README.md  svm.R
SharedUtility/: CudaMacro.h  DataType.h  GetCudaError.h  KeyValue.cpp  KeyValue.h  MyAssert.h  Timer.cu  Timer.h  binarySearch.cu  binarySearch.h  cmdLineParser.cpp  cmdLineParser.h  getMin.cu  getMin.h  initCuda.cu  initCuda.h  powerOfTwo.h
SharedUtility/DataReader/: BaseLibsvmReader.cpp  BaseLibsvmReader.h  LibsvmReaderSparse.h
cmake/: thundersvmConfig.cmake.in
dataset/: get_datasets.sh
docs/: Makefile  README.md  conf.py  faq.md  get-started.md  how-to.md  index.md  intro.md  make.bat  parameters.md  related-website.md  requirements.txt
docs/_themes/: css
include/test/: test_main.h
include/thundersvm/: clion_cuda.h  cmdparser.h  config.h.in  dataset.h  kernelmatrix.h  kernelmatrix_kernel_openmp.h  svm_interface_api.h  svm_matlab_interface.h  svmparam.h  syncarray.h  syncdata.h  syncmem.h  thundersvm.h
mascot/: SVMCmdLineParser.cpp  SVMCmdLineParser.h  classificationKernel.cu  classificationKernel.h  classifierEvaluater.cpp  classifierEvaluater.cu  classifierEvaluater.h  commandLineParser.cpp  commandLineParser.h  csrMatrix.cu  csrMatrix.h  cvFunction.cpp  cvFunction.h  kernelType.h  modelSelector.cu  modelSelector.h  multiPredictor.cu  multiPredictor.h  multiSmoSolver.cu  multiSmoSolver.h  predictionGPUHelper.cu  predictionGPUHelper.h  sigmoidTrainGPUHelper.cu  sigmoidTrainGPUHelper.h  sigmoidTrainGPUHelper.xx  smoSolver.cu  svmMain.cpp  svmMain.cu  svmModel.cpp  svmModel.cu  svmModel.h  svmParam.h  svmPredictor.cu  svmPredictor.h  svmProblem.cpp  svmProblem.cu  svmProblem.h  svmSharedTrainer.cu  svmTrainer.cu  svmTrainer.h  (+5 more)
mascot/DataIOOps/: BaseLibsvmReader.cpp  BaseLibsvmReader.h  DataIO.cpp  DataIO.h  ReadHelper.cpp
mascot/DataReaderForCV/: ReaderForCV.cpp  ReaderForCV.h
ovaLibsvm/: dna.scale.model  svm-train  testrun.sh
python/: README  README.md  setup.py  svm.py  thundersvmScikit.py
python/thundersvm/: __init__.py  thundersvm.py  thundersvmScikit.py
scripts/: build_cpu_wheel.sh  build_cputest.sh  build_gpu_wheel.sh
search/: all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  enums_0.js  enums_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  (+5 more)
src/: classificationKernel.cu  classificationKernel.h  commandLineParser.cpp  commandLineParser.h  constant.h  cvFunction.cpp  cvFunction.h  fileOps.cpp  fileOps.h  gpu_global_utility.cpp  gpu_global_utility.h  initCuda.cu  initCuda.h  modelSelector.cu  modelSelector.h  my_assert.h  smoGPUHelper.cu  smoGPUHelper.h  smoSolver.cu  smoSolver.h  svmMain.cpp  svmMain.cpp~  svmParam.h  svmPredictor.cu  svmPredictor.h  svmTrainer.cu  svmTrainer.h  trainingFunction.cu
src/Cache/: cache.h  cacheGS.cpp  cacheLRU.cpp  cacheMRU.cpp
src/DataIOOps/: DataIO.cpp  DataIO.h  ReadHelper.cpp
src/HessianIO/: hessianIO.cu  hessianIO.h  parHessianIO.cpp  parHessianIO.h  seqHessianIO.cpp  seqHessianIO.h
src/kernelCalculater/: RBFCalGPUHelper.cu  RBFCalculater.cu  (+3 more)
src/test/: CMakeLists.txt  test_cmd.cpp  test_cross_validation.cpp  test_dataset.cpp  test_kernelmatrix.cpp  test_main.cpp  test_nusvc.cpp  test_nusvr.cpp  test_oneclass_svc.cpp  test_svc.cpp  test_svr.cpp  test_syncarray.cpp  test_syncdata.cpp  test_syncmem.cpp
src/test/data/: test_dataset.txt
src/test/gtest/: CMakeLists.txt
src/thundersvm/: CMakeLists.txt  cmdparser.cpp  dataset.cpp  kernelmatrix.cpp  kernelmatrix.cu  kernelmatrix_kernel_openmp.cu  parser.cpp  svm_R_interface.cpp  svm_interface_api.cpp  svm_matlab_interface.cpp  svm_python_interface.cpp  syncarray.cpp  syncdata.cpp  syncmem.cpp  thundersvm-predict.cpp  thundersvm-scikit.cpp  thundersvm-train.cpp  thundersvm.cu
src/thundersvm/kernel/: kernelmatrix_kernel.cpp  kernelmatrix_kernel.cu  smo_kernel.cpp  smo_kernel.cu  testkernel.cu
src/thundersvm/model/: SVC.cu  SvmModel.cpp  SvmModel.cu  nusvc.cpp  nusvr.cpp  oneclass_svc.cpp  oneclass_svc.cu  svc.cpp  svc.cu  svmmodel.cpp  svmmodel.cu  svr.cpp  svr.cu
src/thundersvm/solver/: csmosolver.cpp  csmosolver.cu  nusmosolver.cpp  nusmosolver.cu
src/thundersvm/util/: common.cpp  cross_validation.cpp  log.cpp  metric.cpp
svm-shared/: baseSMO.cu  baseSMO.h  constant.h  csrMatrix.cu  csrMatrix.h  devUtility.cu  devUtility.h  fileOps.cpp  fileOps.h  gpu_global_utility.cu  gpu_global_utility.h  hessianSubMatrix.h  hostStorageManager.cpp  hostStorageManager.h  host_constant.h  initCuda.cu  initCuda.h  my_assert.h  problemInfo.cpp  problemInfo.h  smoDebug.cu  smoGPUHelper.cu  smoGPUHelper.h  smoGPUHelperFatThread.cu  smoSharedSolver.cu  smoSolver.h  storageManager.cu  storageManager.h  svmParam.h  svmSharedTrainer.cu  svmTrainer.h
(+109 files in other folders)
